--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ body{
     color: rgb(51, 2, 96);
     font-family: "Chakra Petch", sans-serif;
 }
+h1{ 
+    font-size: 40px;
+}
+p{ 
+    font-size: 20px;
+}
