--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
     background-color: rgb(156, 158, 155);
     color: rgb(51, 2, 96);
     font-family: "Chakra Petch", sans-serif;
+    margin: 0px;
+{
+header{
+     border-bottom: solid 2px ;
 }
 h1{ 
     font-size: 40px;
