--- a/style.css
+++ b/style.css
@@ -4,12 +4,9 @@ body{
     font-family: "Chakra Petch", sans-serif;
     margin: 0px;
 {
-header{
-     border-bottom: solid 2px ;
-}
-h1{ 
-    font-size: 40px;
-}
-p{ 
-    font-size: 20px;
+header {
+    border-bottom: solid 2px rgb(17, 52, 97);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(29, 5, 38);
 }
