--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body{
+body {
     background-color: rgb(156, 158, 155);
     color: rgb(51, 2, 96);
     font-family: "Chakra Petch", sans-serif;
     margin: 0px;
-{
+}
 header {
     border-bottom: solid 2px rgb(17, 52, 97);
     padding: 20px;
