--- a/style.css
+++ b/style.css
@@ -20,3 +20,7 @@ section {
     display: flex;
     justify-content: center;
 }
+.chamada-texto{
+    background-color: rgb(53, 82, 5);
+    margin-right: 5%;
+}
